[gd_scene load_steps=5 format=3 uid="uid://j608j7hqx84o"]

[ext_resource type="Script" path="res://start_screen.gd" id="1_0japk"]
[ext_resource type="Texture2D" uid="uid://tjxeu0ckh5ce" path="res://Startscreen3.png" id="2_m5gh3"]
[ext_resource type="Texture2D" uid="uid://duw2a8eldvwn2" path="res://Button2.png" id="3_ednbo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2dptp"]
texture = ExtResource("3_ednbo")

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0japk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_m5gh3")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.04
anchor_bottom = 0.024
offset_left = 325.0
offset_top = 268.0
offset_right = 553.2
offset_bottom = 398.08
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_2dptp")
text = "Start"

[node name="ControlButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.04
anchor_bottom = 0.024
offset_left = 324.0
offset_top = 484.0
offset_right = 552.2
offset_bottom = 614.08
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_2dptp")
text = "Steuerung"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.04
anchor_bottom = 0.024
offset_left = 326.0
offset_top = 699.0
offset_right = 554.2
offset_bottom = 829.08
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_2dptp")
text = "Beenden"
